# efm8

./: .coverage  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  Makefile  README.rst  efm8.py  efm8_read.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_efm8.py  u2fzero.py
.github/workflows/: ci.yml  publish.yml
docs/: Makefile  conf.py  efm8.rst  efm8_read.rst  index.rst  install.rst  u2fzero.rst
efm8/: __init__.py  __main__.py  u2fzero.py
tests/: bad_checksum.hex  good.hex  nonlinear.hex
types/: hid.pyi
