[metadata]
name = efm8
description = Flash via AN945: EFM8 Factory Bootloader HID
long_description = file: README.rst
license = BSD
keywords = EFM8 AN945 HID Bootloader
author = Barnaby Shearer
author_email = b@zi.is
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 

[options]
packages = find:
install_requires = 
    hidapi>=0.7.99.post21
    pythoncrc>=1.21
python_requires = >=2.7
include_package_data = True

[options.package_data]
* = py.typed

