[metadata]
name = efm8
description = Flash via AN945: EFM8 Factory Bootloader HID.
long_description = file: README.rst
keywords = AN945 Bootloader EFM8 HID hacktoberfest
author = Barnaby Shearer
author_email = b@zi.is
repository = "https://github.com/BarnabyShearer/efm8"
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
    hidapi>=0.7.99.post21
    pythoncrc>=1.21
    typing; python_version < "3"
python_requires = >=2.7

[options.package_data]
* = py.typed, *.c, *.h

[options.entry_points]
console_scripts = 
    efm8 = efm8.__main__:main
    efm8_read = efm8.__main__:read
    u2fzero = efm8.u2fzero:main

